--- a/become-a-host/intro.html
+++ b/become-a-host/intro.html
@@ -161,7 +161,7 @@
                     <div class="_1cu340vw"></div>
                     <div class="_cu2h1k4">
                       <div>
-                        <div class="_wgmchy">
+                        <div class="flex-column">
                           <div class="_e090fc">
                             <span
                               ><button class="_1l7cdtx" type="button">
@@ -225,7 +225,7 @@
                     }
                   </style>
                   <div aria-hidden="true" class="_kr8u8xr">
-                    <div class="_wgmchy">
+                    <div class="flex-column">
                       <div class="_e090fc">
                         <span
                           ><button class="_1l7cdtx" type="button">
