--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -145,7 +145,7 @@
                     <div class="_18kl98vr"></div>
                     <div class="_xyhqsk">
                       <div>
-                        <div class="_wgmchy">
+                        <div class="flex-column">
                           <div class="_e090fc">
                             <span
                               ><button class="_1l7cdtx" type="button">
@@ -210,7 +210,7 @@
                     }
                   </style>
                   <div aria-hidden="true" class="_h3byb0o">
-                    <div class="_wgmchy">
+                    <div class="flex-column">
                       <div class="_e090fc">
                         <span
                           ><button class="_1l7cdtx" type="button">
