--- a/products.html
+++ b/products.html
@@ -9246,7 +9246,7 @@
                                     </div>
                                   </div>
                                   <div class="c1yo0219 dir dir-ltr">
-                                    <div class="_12nksyy">
+                                    <div class="flex-row-full-width">
                                       <div class="_16e70jgn">
                                         <div>
                                           <div class="c1yo0219 dir dir-ltr">
@@ -16365,7 +16365,7 @@
                                                       <div>
                                                         <div class="_ud8a1c">
                                                           <div
-                                                            class="_wgmchy"
+                                                            class="flex-column"
                                                             data-testid="book-it-default"
                                                           >
                                                             <div
@@ -16861,7 +16861,7 @@
                                                       <div>
                                                         <div class="_ud8a1c">
                                                           <div
-                                                            class="_wgmchy"
+                                                            class="flex-column"
                                                             data-testid="book-it-default"
                                                           >
                                                             <div
@@ -17550,7 +17550,7 @@
                                                       <div>
                                                         <div class="_ud8a1c">
                                                           <div
-                                                            class="_wgmchy"
+                                                            class="flex-column"
                                                             data-testid="book-it-default"
                                                           >
                                                             <div
