--- a/merchandising.html
+++ b/merchandising.html
@@ -1235,7 +1235,7 @@
                                                     <span
                                                       ><div class="_1vj8vki">
                                                         <div
-                                                          class="_wgmchy"
+                                                          class="flex-column"
                                                           style="
                                                             padding-bottom: 32px;
                                                           "
@@ -1265,7 +1265,7 @@
                                                       <div class="_16sb0g4v">
                                                         <div class="_1udzt2s">
                                                           <div
-                                                            class="_wgmchy"
+                                                            class="flex-column"
                                                             style="
                                                               padding-bottom: 32px;
                                                             "
@@ -2758,7 +2758,7 @@
                                                   <span
                                                     ><div class="_1vj8vki">
                                                       <div
-                                                        class="_wgmchy"
+                                                        class="flex-column"
                                                         style="
                                                           padding-bottom: 32px;
                                                         "
@@ -2786,7 +2786,7 @@
                                                     <div class="_16sb0g4v">
                                                       <div class="_1udzt2s">
                                                         <div
-                                                          class="_wgmchy"
+                                                          class="flex-column"
                                                           style="
                                                             padding-bottom: 32px;
                                                           "
@@ -6293,7 +6293,7 @@
                                                 <div class="_h69t7tv">
                                                   <div class="header__logo">
                                                     <div
-                                                      class="_wgmchy"
+                                                      class="flex-column"
                                                       style="
                                                         padding-bottom: 24px;
                                                       "
@@ -6321,7 +6321,7 @@
                                                 <div class="_pawvzww">
                                                   <div class="_1lo0c2q">
                                                     <div
-                                                      class="_wgmchy"
+                                                      class="flex-column"
                                                       style="
                                                         padding-bottom: 48px;
                                                       "
@@ -6348,7 +6348,7 @@
                                                 </div>
                                                 <div class="_i5m7e6w">
                                                   <div
-                                                    class="_wgmchy"
+                                                    class="flex-column"
                                                     style="padding-bottom: 48px"
                                                   >
                                                     <h2 class="footer__heading">
@@ -8445,7 +8445,7 @@
                                                 <div class="_h69t7tv">
                                                   <div class="header__logo">
                                                     <div
-                                                      class="_wgmchy"
+                                                      class="flex-column"
                                                       style="
                                                         padding-bottom: 24px;
                                                       "
@@ -8473,7 +8473,7 @@
                                                 <div class="_pawvzww">
                                                   <div class="_1lo0c2q">
                                                     <div
-                                                      class="_wgmchy"
+                                                      class="flex-column"
                                                       style="
                                                         padding-bottom: 48px;
                                                       "
@@ -8500,7 +8500,7 @@
                                                 </div>
                                                 <div class="_i5m7e6w">
                                                   <div
-                                                    class="_wgmchy"
+                                                    class="flex-column"
                                                     style="padding-bottom: 48px"
                                                   >
                                                     <h2 class="footer__heading">
@@ -10680,7 +10680,7 @@
                                               <div class="_h69t7tv">
                                                 <div class="header__logo">
                                                   <div
-                                                    class="_wgmchy"
+                                                    class="flex-column"
                                                     style="padding-bottom: 24px"
                                                   >
                                                     <h2 class="footer__heading">
@@ -10705,7 +10705,7 @@
                                               <div class="_pawvzww">
                                                 <div class="_1lo0c2q">
                                                   <div
-                                                    class="_wgmchy"
+                                                    class="flex-column"
                                                     style="padding-bottom: 48px"
                                                   >
                                                     <h2 class="footer__heading">
@@ -10729,7 +10729,7 @@
                                               </div>
                                               <div class="_i5m7e6w">
                                                 <div
-                                                  class="_wgmchy"
+                                                  class="flex-column"
                                                   style="padding-bottom: 48px"
                                                 >
                                                   <h2 class="footer__heading">
