--- a/payment.html
+++ b/payment.html
@@ -153,7 +153,7 @@
                                   </div>
                                 </div>
                                 <div class="c1yo0219 dir dir-ltr">
-                                  <div class="_12nksyy">
+                                  <div class="flex-row-full-width">
                                     <div class="_bdo76v7">
                                       <div style="margin-bottom: 64px">
                                         <div class="c1yo0219 dir dir-ltr">
